# todo-api-bench

./: .gitignore  README.md  supabench.sh  test-round.sh
postgres/: database.env  docker-compose.yml  init-postgrest.sql  init.sql
tests/: .gitignore  README.md  package-lock.json  package.json
todo-actix-api/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-basic  Dockerfile_debian  Dockerfile_minimal  Dockerfile_scratch  README.md  docker-compose.yml  loadtest.sh
todo-actix-api/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs
todo-bun-elysia/: Dockerfile_bun  README.md  bun.lockb  docker-compose.yml  loadtest.sh  package.json
todo-bun-pgjs/: Dockerfile_dist  Dockerfile_distroless  bun.lockb  docker-compose.yml  loadtest.sh  package.json
todo-dotnet-api/: .dockeringore  .gitignore  Dockerfile  Program.cs  README.md  Startup.cs  appsettings.Development.json  appsettings.json  docker-compose.yml  todo-api.csproj
todo-express-api/: Dockerfile_minimal  Dockerfile_v20  README.md  docker-compose.yml  loadtest.sh  package-lock.json  package.json
todo-fast-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  loadtest.sh  main.py  requirements-all.txt  requirements.txt
todo-fastify-api/: .dockerignore  Dockerfile  Dockerfile_minimal  Dockerfile_v20  README.md  docker-compose.yml  loadtest.sh  package-lock.json  package.json
todo-fiber-api/: Dockerfile  README.md  docker-compose.yml  go.sum  loadtest.sh  main.go
todo-fiber1-api/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  loadtest.sh  main.go  (+1 more)
(+304 files in other folders)
